# qa-bot

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  README.md  pyproject.toml  qabot.py  requirements.txt  setup.py
.github/workflows/: ci.yaml
agents/debug_allure_report/: main.py  pyproject.toml
agents/debug_allure_report/agents/: allure_report_debug_agent.py
agents/debug_allure_report/prompts/: allure_debug_prompt.py
agents/debug_allure_report/tools/: s3_tools.py
helm/ollama/: Chart.yaml  values.yaml
helm/ollama/templates/: deployment.yaml  pvc.yaml  service.yaml
helm/qabot/: Chart.yaml  README.md  values.yaml
helm/qabot/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  secrets.yaml  service-account.yaml
qabot/: env_maintenance.py  greeter.py  jenkins_job_invoker.py  manifests_checker.py  parse_codeowners.py  pipeline_maintenance.py  qabot.py  release.py  repo_owner.json  state_of_the_nation.py
qabot/.github/workflows/: ci.yaml
qabot/env_helper_scripts/: scaleup-namespace.sh
qabot/lib/: githublib.py  httplib.py  influxlib.py  jenkinslib.py  jiralib.py  slacklib.py
qabot/scripts/: scaleup-namespace.sh
tests/: test_jenkinslib.py  test_manifests_checker.py  test_parse_codeowners.py  test_pipeline_maintenance.py
