[tool.poetry]
name = "qa-bot"
version = "0.3.0"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
PyGithub = "^1.44.1"
httmock = "^1.4.0"
influxdb = "^5.3.1"
jira = "^3.0.1"
cryptography = "^46.0.5"
ascii_graph = "^1.5.1"
slack-bolt = "^1.23.0"
slack-sdk = "^3.35.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
